29 de Abril de 2016 Ximena Valero Modificación de algunas pantallas en carpeta personal
pendientes por revisar

--- a/DesignerRHN/DesignerRHN-war/web/emplviajero.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/emplviajero.xhtml
@@ -152,10 +152,10 @@
 
                                 <p:ajax event="filter" listener="#{controlVigenciasViajeros.eventoFiltrarViajero()}"/>                                
                                 <p:ajax event="rowSelect" listener="#{controlVigenciasViajeros.activarAceptar()}" update=":form:aceptarS"/>
-                                <p:ajax event="rowDblselect" listener="#{controlVigenciasViajeros.actualizarNormaLaboral()}" process="@this" />
+                                <p:ajax event="rowDblselect" listener="#{controlVigenciasViajeros.actualizarViajero}" immediate="true" update=":form:sucursalesDialogo" process="@this" />
                                 <f:facet name="header">  
                                     <h:outputText value="#{msg['buscarTV']}"  style="position: absolute; left: 27px; top: 14px"/>  
-                                    <p:inputText id="globalFilter" onkeyup="lovTiposFamiliares.filter();" style="width:150px; position: relative; left: 10px;" />  
+                                    <p:inputText id="globalFilter" onkeyup="lovTiposFamiliares.filter();" value="#{filtrado}" style="width:150px; position: relative; left: 10px;" />  
                                 </f:facet>
                                 <p:column filterBy="#{tipoviajeroD.codigo}" width="60" filterStyle="width:50px;" filterMatchMode="contains">
                                     <f:facet name="header">
@@ -174,9 +174,8 @@
 
                             <h:outputText id="infoRegistroTiposViajeros" value="#{msg['infoRegistro']} #{controlVigenciasViajeros.infoRegistroTiposViajeros}" style="position: absolute; left: 15px; top: 350px; font-weight: bold"/>
 
-                            <p:commandButton id="aceptarS" style="position: relative; left: 275px; height: 30px; width: 90px; background-image: url(Imagenes/Iconos/aceptar.png); background-size: 100% 100%; background-repeat: no-repeat; border: none;" value="" disabled="#{controlVigenciasViajeros.aceptar}"   actionListener="#{controlVigenciasViajeros.actualizarNormaLaboral()}" process="@this"/>
-
-                            <p:commandButton id="atrasS" style="position: relative; left: 275px; height: 30px; width: 90px; background-image: url(Imagenes/Iconos/cancelar.png); background-size: 100% 100%; background-repeat: no-repeat; border: none;" value="" actionListener="#{controlVigenciasViajeros.cancelarCambioNormaLaboral()}" process="@this" />
+                            <p:commandButton id="aceptarS" style="position: relative; left: 230px; top: -10px;" value="#{msg['aceptar']}" icon="ui-icon-check" disabled="#{controlVigenciasViajeros.aceptar}" update=":form:sucursalesDialogo" actionListener="#{controlVigenciasViajeros.actualizarViajero}" process="@this"/>
+                            <p:commandButton id="atrasS" style="position: relative; left: 235px; top: -10px;" update=":form:sucursalesDialogo" value="#{msg['cancelar']}" icon="ui-icon-arrowreturnthick-1-w" actionListener="#{controlVigenciasViajeros.cancelarCambioVigenciaViajero}" process="@this" />
 
                         </p:dialog>
 
@@ -225,7 +224,7 @@
                 </h:form>
 
                 <h:form id="formularioDialogos">
-                    <p:dialog id="nuevoRegistroEvalEmpresas" header="#{msg['nuevoregistro']}" widgetVar="nuevoRegistroEvalEmpresas" closable="false" resizable="false"  draggable="false" modal="true" height="140" width="340" style=" padding: 0px">  
+                    <p:dialog id="nuevoRegistroEvalEmpresas" header="#{msg['nuevoregistro']}" widgetVar="nuevoRegistroEvalEmpresas" closable="false" resizable="false"  draggable="false" modal="true" height="170" width="380" style=" padding: 0px">  
                         <center><strong><h:outputText id="informacion" value="#{msg['ingresarnuevo']}" style="font-size: 14px; color: blue; position: relative; top: 10px" /></strong></center> 
 
                         <p:panel id="nuevaaEvalEmpresa" style="border: none;">
@@ -239,24 +238,24 @@
                             </div>
                             <p:watermark for="nuevaFecha" value="#{msg['fecha']}" />
 
-                            <strong><h:outputText value="*#{msg['tipoViajeroN']}" style=" position: absolute; top: 85px" /></strong>
-                            <p:inputText id="nuevoNombreSucursal" value="#{controlVigenciasViajeros.nuevoVigenciasViajeros.tipoViajero.nombre}" style=" width: 127px; position: absolute; left: 135px; top: 80px; text-transform: uppercase" onclick="select();">
+                            <strong><h:outputText value="*#{msg['tipoViajeroN']}" style=" position: absolute; top: 90px" /></strong>
+                            <p:inputText id="nuevoNombreSucursal" value="#{controlVigenciasViajeros.nuevoVigenciasViajeros.tipoViajero.nombre}" style=" width: 127px; position: absolute; left: 135px; top: 85px; text-transform: uppercase" onclick="select();">
                                 <p:ajax event="click" listener="#{controlVigenciasViajeros.valoresBackupAutocompletar(1)}" />
                                 <p:ajax event="change" listener="#{controlVigenciasViajeros.autocompletarNuevo('VIGENCIASVIAJEROS',controlVigenciasViajeros.nuevoVigenciasViajeros.tipoViajero.nombre, 1)}" />
                                 <p:ajax event="dblclick" listener="#{controlVigenciasViajeros.asignarVariableTiposviajeros(0)}" />
                             </p:inputText>
 
-                            <p:commandButton style="width: 23px; height: 25px; position: absolute; left: 270px; top: 80px;  " id="btnnuevoNombreSucursal" icon="ui-icon-search" process="@this"  actionListener="#{controlVigenciasViajeros.asignarVariableTiposviajeros(0)}"/>   
+                            <p:commandButton style="width: 23px; height: 25px; position: absolute; left: 275px; top: 85px; background-image: url(Imagenes/Iconos/lupa.png); background-size: 100% 100%; background-repeat: no-repeat; border: none" id="btnnuevoNombreSucursal" value="" actionListener="#{controlVigenciasViajeros.asignarVariableTiposviajeros(0)}" process="@this"/>   
                             <p:watermark for="nuevoNombreSucursal" value="#{msg['tipoViajero']}" />
 
-                            <p:commandButton id="limpiar" value="#{msg['limpiar']}" style="position: absolute; left: 20px; top: 115px;"  actionListener="#{controlVigenciasViajeros.limpiarNuevoVigenciasViajeros()}" update="nuevaaEvalEmpresa" process="@this" icon="ui-icon-trash"/>
-                            <p:commandButton id="agregarTE" value="#{msg['agregar']}" style="position: absolute; left: 110px; top: 115px;" actionListener="#{controlVigenciasViajeros.agregarNuevoVigenciasViajeros()}" process="@this" icon="ui-icon-circle-check"/>
-                            <p:commandButton id="cancelarTE" value="#{msg['cancelar']}" style="position: absolute; left: 220px; top: 115px;"  update="nuevaaEvalEmpresa" onclick="nuevoRegistroEvalEmpresas.hide();"  actionListener="#{controlVigenciasViajeros.limpiarNuevoVigenciasViajeros()}"  process="@this" icon="ui-icon-circle-close"/>
+                            <p:commandButton id="limpiar" value="#{msg['limpiar']}" style="position: absolute; left: 20px; top: 130px;"  actionListener="#{controlVigenciasViajeros.limpiarNuevoVigenciasViajeros()}" update="nuevaaEvalEmpresa" process="@this" icon="ui-icon-trash"/>
+                            <p:commandButton id="agregarTE" value="#{msg['agregar']}" style="position: absolute; left: 150px; top: 130px;" actionListener="#{controlVigenciasViajeros.agregarNuevoVigenciasViajeros()}" process="@this" icon="ui-icon-circle-check"/>
+                            <p:commandButton id="cancelarTE" value="#{msg['cancelar']}" style="position: absolute; left: 250px; top: 130px;"  update="nuevaaEvalEmpresa" onclick="nuevoRegistroEvalEmpresas.hide();"  actionListener="#{controlVigenciasViajeros.limpiarNuevoVigenciasViajeros()}"  process="@this" icon="ui-icon-circle-close"/>
                         </p:panel>
                     </p:dialog>
 
 
-                    <p:dialog id="duplicarRegistroEvalCompetencias" header="#{msg['duplicarregistro']}" widgetVar="duplicarRegistroEvalCompetencias" closable="false" resizable="false"  draggable="false" modal="true" height="140" width="340" style=" padding: 0px">  
+                    <p:dialog id="duplicarRegistroEvalCompetencias" header="#{msg['duplicarregistro']}" widgetVar="duplicarRegistroEvalCompetencias" closable="false" resizable="false"  draggable="false" modal="true" height="170" width="380" style=" padding: 0px">  
                         <center><strong><h:outputText value="#{msg['ingresarnuevo']}" style="font-size: 14px; color: blue; position: relative; top: 10px" /></strong></center> 
 
                         <p:panel id="duplicarEvC" style="border: none;">
@@ -270,18 +269,18 @@
                             </div>
                             <p:watermark for="duplicarFechaa" value="#{msg['fecha']}" />
 
-                            <strong><h:outputText value="*#{msg['tipoViajeroN']}" style=" position: absolute; top: 85px" /></strong>
-                            <p:inputText id="duplicarTipoCentroCostos" value="#{controlVigenciasViajeros.duplicarVigenciasViajeros.tipoViajero.nombre}" style=" width: 127px; position: absolute; left: 135px; top: 80px; text-transform: uppercase" onclick="select();">
+                            <strong><h:outputText value="*#{msg['tipoViajeroN']}" style=" position: absolute; top: 90px" /></strong>
+                            <p:inputText id="duplicarTipoCentroCostos" value="#{controlVigenciasViajeros.duplicarVigenciasViajeros.tipoViajero.nombre}" style=" width: 127px; position: absolute; left: 135px; top: 85px; text-transform: uppercase" onclick="select();">
                                 <p:ajax event="click" listener="#{controlVigenciasViajeros.valoresBackupAutocompletar(2)}" />
                                 <p:ajax event="change" listener="#{controlVigenciasViajeros.autocompletarDuplicado('VIGENCIASVIAJEROS',controlVigenciasViajeros.duplicarVigenciasViajeros.tipoViajero.nombre, 2)}" />
                                 <p:ajax event="dblclick" listener="#{controlVigenciasViajeros.asignarVariableTiposviajeros(1)}" />
                             </p:inputText>
-                            <p:commandButton style="width: 23px; height: 25px; position: absolute; left: 270px; top: 80px;  " id="btnduplicarNombreSucursal" icon="ui-icon-search" process="@this"  actionListener="#{controlVigenciasViajeros.asignarVariableTiposviajeros(1)}"/>   
+                            <p:commandButton style="width: 23px; height: 25px; position: absolute; left: 275px; top: 85px; background-image: url(Imagenes/Iconos/lupa.png); background-size: 100% 100%; background-repeat: no-repeat; border: none;" value="" id="btnduplicarNombreSucursal" actionListener="#{controlVigenciasViajeros.asignarVariableTiposviajeros(1)}" process="@this"/>   
                             <p:watermark for="duplicarTipoCentroCostos" value="#{msg['tipoViajero']}" />
 
-                            <p:commandButton id="limpiarD" value="#{msg['limpiar']}" style="position: absolute; left: 20px; top: 115px;"  actionListener="#{controlVigenciasViajeros.limpiarDuplicarVigenciasViajeros()}" update="duplicarEvC" process="@this" icon="ui-icon-trash"/>
-                            <p:commandButton id="duplicarVFP" value="#{msg['agregar']}" style="position: absolute; left: 130px; top: 115px;" actionListener="#{controlVigenciasViajeros.confirmarDuplicar()}" process="@this" icon="ui-icon-circle-check"/>
-                            <p:commandButton id="cancelarDuplicarVFP" value="#{msg['cancelar']}" style="position: absolute; left: 220px; top: 115px;"  update="duplicarEvC" onclick="duplicarRegistroEvalCompetencias.hide();"  actionListener="#{controlVigenciasViajeros.limpiarDuplicarVigenciasViajeros()}"  process="@this" icon="ui-icon-circle-close"/>
+                            <p:commandButton id="limpiarD" value="#{msg['limpiar']}" style="position: absolute; left: 20px; top: 130px;"  actionListener="#{controlVigenciasViajeros.limpiarDuplicarVigenciasViajeros()}" update="duplicarEvC" process="@this" icon="ui-icon-trash"/>
+                            <p:commandButton id="duplicarVFP" value="#{msg['agregar']}" style="position: absolute; left: 150px; top: 130px;" actionListener="#{controlVigenciasViajeros.confirmarDuplicar()}" process="@this" icon="ui-icon-circle-check"/>
+                            <p:commandButton id="cancelarDuplicarVFP" value="#{msg['cancelar']}" style="position: absolute; left: 250px; top: 130px;"  update="duplicarEvC" onclick="duplicarRegistroEvalCompetencias.hide();"  actionListener="#{controlVigenciasViajeros.limpiarDuplicarVigenciasViajeros()}"  process="@this" icon="ui-icon-circle-close"/>
                         </p:panel>
                     </p:dialog>
 
@@ -289,14 +288,15 @@
                         <h:graphicImage value="Imagenes/Iconos/informacion.png" width="50" height="50" style="position: absolute; left: 10px; top: 10px;"  />
                         <h:outputText value="#{msg['confirmarRastro']}" style="position: absolute; left: 70px; top: 15px; width: 250px; font-weight:bold; text-align: center" />
                         <p:commandButton value="#{msg['si']}"  icon="ui-icon-check" onclick="confirmarRastro.hide();" actionListener="#{controlRastro.recibirDatosTabla(controlVigenciasViajeros.vigenciaSeleccionada.secuencia, 'VigenciasViageros','emplviajero')}" 
-                                         style="position: absolute; top: 63px; left: 180px" action="rastro" process="@this" />
+                                         oncomplete="#{controlVigenciasViajeros.anularLOV()}" style="position: absolute; top: 63px; left: 180px" action="rastro" process="@this" />
                         <p:commandButton value="#{msg['no']}" icon="ui-icon-close" onclick="confirmarRastro.hide();" style="position: absolute; top: 63px; left: 250px" process="@this" />
                     </p:dialog>
 
                     <p:dialog id="confirmarRastroHistorico" header="#{msg['informacion']}" widgetVar="confirmarRastroHistorico"  resizable="false" draggable="false" modal="true" height="95" width="350px"  closable="false">  
                         <h:graphicImage value="Imagenes/Iconos/informacion.png" width="50" height="50" style="position: absolute; left: 10px; top: 10px;"  />
                         <h:outputText value="#{msg['confirmarRastroHistorico']}" style="position: absolute; left: 70px; top: 15px; width: 250px; font-weight:bold; text-align: center" />
-                        <p:commandButton value="#{msg['si']}"  icon="ui-icon-check" onclick="confirmarRastroHistorico.hide();" actionListener="#{controlRastro.historicosTabla('VigenciasViageros','emplviajero')}" style="position: absolute; top: 60px; left: 200px" action="rastro" process="@this" />
+                        <p:commandButton value="#{msg['si']}"  icon="ui-icon-check" onclick="confirmarRastroHistorico.hide();" actionListener="#{controlRastro.historicosTabla('VigenciasViageros','emplviajero')}"
+                                         oncomplete="#{controlVigenciasViajeros.anularLOV()}" style="position: absolute; top: 60px; left: 200px" action="rastro" process="@this" />
                         <p:commandButton value="#{msg['no']}" icon="ui-icon-close" onclick="confirmarRastroHistorico.hide();" style="position: absolute; top: 60px; left: 270px" process="@this" />
                     </p:dialog>
 
