--- a/DesignerRHN/DesignerRHN-war/web/NovedadVacaciones.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/NovedadVacaciones.xhtml
@@ -112,7 +112,7 @@
                                 </p:column>
                             </p:dataTable>
 
-                            <p:commandButton style="width: 150px; height: 30px; background-image: url(Imagenes/Iconos/buscardbL.png); background-size: 100% 100%; background-repeat: no-repeat; border: none; position: relative;
+                            <p:commandButton style="width: 150px; height: 30px; background-image: url(Imagenes/Iconos/buscardbL.png); background-size: 100% 100%; background-repeat: no-repeat; border: none;
                                              position: relative; left: 650px; top: -88px; " id="btnBuscarEmpleados" actionListener="#{controlNovedadesVacaciones.abrirLista(0) }" value="" process="@this"/>
                             <p:commandButton style="width: 150px; height: 30px; background-image: url(Imagenes/Iconos/todosdbL.png); background-size: 100% 100%; background-repeat: no-repeat; border: none; 
                                              position: relative; left: 500px; top: -50px;" id="btnMostrarTodos" widgetVar="btnMostrarTodos" value="" 
