--- a/DesignerRHN/DesignerRHN-war/web/EmplVacaPendiente.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/EmplVacaPendiente.xhtml
@@ -26,7 +26,8 @@
                         <p:toolbar styleClass="cssToolbar">  
                             <p:toolbarGroup align="left"> 
 
-                                <p:commandButton id="guardarRapido" value="" style="background-image: url(Imagenes/Iconos/guardar.png); background-size: 100% 100%; background-repeat: no-repeat; border: none; width: 25px; height: 25px; " actionListener="#{controlEmplVacaPendiente.guardarGeneral()}"  process="@this" />
+                                <p:commandButton id="guardarRapido" value="" style="background-image: url(Imagenes/Iconos/guardar.png); background-size: 100% 100%; background-repeat: no-repeat; border: none; width: 25px; height: 25px; " 
+                                                 actionListener="#{controlEmplVacaPendiente.guardarGeneral()}" oncomplete="datosVacacionesPEmpleado.unselectAllRows(), datosVacacionesDEmpleado.unselectAllRows()" process="@this" />
                                 <p:tooltip  for="guardarRapido" value="#{msg['guardar']}" />
 
                                 <p:commandButton id="editar" value="" style="background-image: url(Imagenes/Iconos/editar.png); background-size: 100% 100%; background-repeat: no-repeat; border: none; width: 25px; height: 25px " actionListener="#{controlEmplVacaPendiente.editarCelda()}" process="@this"/>
