--- a/DesignerRHN/DesignerRHN-war/web/personaindividual.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/personaindividual.xhtml
@@ -613,7 +613,7 @@
                             </p:scrollPanel>  
                         </fieldset>
 
-                        <p:commandButton style="position: absolute; left: 315px; top: 500px; " id="ACEPTAR" value="#{msg['ingresarPersonal']}" icon="ui-icon-disk" actionListener="#{controlPersonaIndividual.crearNuevoEmpleado()}"  process="@this" />
+                        <p:commandButton style="position: absolute; left: 315px; top: 500px; width: 175px; height: 30px; background-image: url(Imagenes/Iconos/botonL.png); background-size: 100% 100%; background-repeat: no-repeat; border: none;  color: white; " id="ACEPTAR" value="#{msg['ingresarPersonal']}" icon="ui-icon-disk" actionListener="#{controlPersonaIndividual.crearNuevoEmpleado()}"  process="@this" />
                         <p:commandButton style="position: absolute; left: 775px; top: 500px; height: 30px; width: 90px; background-image:  url(Imagenes/Iconos/cancelar.png); 
                                          background-size: 100% 100%; background-repeat: no-repeat; border: none;" id="ATRAS" value="" action="nomina" process="@this">
                             <f:actionListener binding="#{controlPersonaIndividual.cancelarModificaciones()}" />
@@ -628,11 +628,10 @@
                     <h:form id="formDInformacionPersonal">
 
                         <p:dialog header="#{msg['empresaM']}" visible="true" widgetVar="EmpresaInformacionPersonalDialogoVisible" draggable="false" resizable="false" closable="false" id="EmpresaInformacionPersonalDialogoVisible"  
-                                  showEffect="fade" hideEffect="fade" width="410" height="360" modal="true" >
+                                  showEffect="fade" hideEffect="fade" width="416" height="345">
                             <p:dataTable id="lovEmpresaInformacionPersonalVisible" style=" width: 370px" var="empresaIPV" value="#{controlPersonaIndividual.lovEmpresas}" rowKey="#{empresaIPV.secuencia}"
-                                         selection="#{controlPersonaIndividual.empresaSeleccionada}" scrollWidth="388" selectionMode="single" widgetVar="lovEmpresaInformacionPersonalVisible" scrollable="true" scrollHeight="250"
-                                         emptyMessage="#{msg['lovvacio']}" filteredValue="#{controlPersonaIndividual.filtrarLovEmpresas}"
-                                         >
+                                         selection="#{controlPersonaIndividual.empresaSeleccionada}" scrollWidth="388" selectionMode="single" widgetVar="lovEmpresaInformacionPersonalVisible" scrollable="true" scrollHeight="200"
+                                         emptyMessage="#{msg['lovvacio']}" filteredValue="#{controlPersonaIndividual.filtrarLovEmpresas}">
                                 <p:ajax event="rowSelect" process="@this" immediate="true"  listener="#{controlPersonaIndividual.activarAceptar()}" update=":formLovs:formDInformacionPersonal:aceptarEIPV, :formLovs:formDInformacionPersonal:atrasEIPV"/>
                                 <p:ajax event="rowDblselect" listener="#{controlPersonaIndividual.actualizarParametroEmpresaInformacionPersonalVisible()}"  process="@this" />
                                 <f:facet name="header">  
@@ -653,16 +652,16 @@
                                 </p:column>
                             </p:dataTable>
 
-                            <h:outputText id="infoRegistroEmpresaInformacionPersonalV" value="#{controlPersonaIndividual.infoRegistroEmpresaInformacionPersonal}" style="position: absolute; left: 20px; top: 295px; font-weight: bold"/>
+                            <h:outputText id="infoRegistroEmpresaInformacionPersonalV" value="#{controlPersonaIndividual.infoRegistroEmpresaInformacionPersonal}" style="position: relative; left: 10px; top: 5px; font-weight: bold"/>
 
-                            <p:commandButton id="aceptarEIPV" style="position: relative; left: 220px; top: -15px" value="#{msg['aceptar']}" onclick="operacionEnProceso.show()" disabled="#{controlPersonaIndividual.aceptar}" oncomplete="operacionEnProceso.hide(), EmpresaInformacionPersonalDialogoVisible.hide()" actionListener="#{controlPersonaIndividual.actualizarParametroEmpresaInformacionPersonalVisible()}" process="@this" icon="ui-icon-check"/>
-                            <p:commandButton id="atrasEIPV" style="position: relative; left: 220px; top: -15px" value="#{msg['atras']}" onclick="operacionEnProceso.show()" disabled="#{controlPersonaIndividual.aceptar}" oncomplete="operacionEnProceso.hide(), EmpresaInformacionPersonalDialogoVisible.hide()" actionListener="#{controlPersonaIndividual.cancelarParametroEmpresaInformacionPersonalVisible()}" process="@this" icon="ui-icon-arrowreturnthick-1-w"/>
+                            <p:commandButton id="aceptarEIPV" style="position: relative; left: 55px; top: 15px" value="#{msg['aceptar']}" onclick="operacionEnProceso.show()" disabled="#{controlPersonaIndividual.aceptar}" oncomplete="operacionEnProceso.hide(), EmpresaInformacionPersonalDialogoVisible.hide()" actionListener="#{controlPersonaIndividual.actualizarParametroEmpresaInformacionPersonalVisible()}" process="@this" icon="ui-icon-check"/>
+                            <p:commandButton id="atrasEIPV" style="position: relative; left: 56px; top: 15px" value="#{msg['atras']}" onclick="operacionEnProceso.show()" disabled="#{controlPersonaIndividual.aceptar}" oncomplete="operacionEnProceso.hide(), EmpresaInformacionPersonalDialogoVisible.hide()" actionListener="#{controlPersonaIndividual.cancelarParametroEmpresaInformacionPersonalVisible()}" process="@this" icon="ui-icon-arrowreturnthick-1-w"/>
                         </p:dialog>
 
                         <p:dialog header="#{msg['empresaM']}" widgetVar="EmpresaInformacionPersonalDialogo" draggable="false" resizable="false" closable="false" id="EmpresaInformacionPersonalDialogo"  
-                                  showEffect="fade" hideEffect="fade" width="410" height="410" modal="true" >
+                                  showEffect="fade" hideEffect="fade" width="416" height="345">
                             <p:dataTable id="lovEmpresaInformacionPersonal" style=" width: 370px" var="empresaIP" value="#{controlPersonaIndividual.lovEmpresas}" rowKey="#{empresaIP.secuencia}"
-                                         selection="#{controlPersonaIndividual.empresaSeleccionada}" scrollWidth="388" selectionMode="single" widgetVar="lovEmpresaInformacionPersonal" scrollable="true" scrollHeight="250"
+                                         selection="#{controlPersonaIndividual.empresaSeleccionada}" scrollWidth="388" selectionMode="single" widgetVar="lovEmpresaInformacionPersonal" scrollable="true" scrollHeight="200"
                                          emptyMessage="#{msg['lovvacio']}" filteredValue="#{controlPersonaIndividual.filtrarLovEmpresas}"
                                          >
                                 <p:ajax event="rowDblselect" listener="#{controlPersonaIndividual.actualizarParametroEmpresaInformacionPersonal()}"  process="@this" />
@@ -671,13 +670,13 @@
                                     <h:outputText value="#{msg['buscarEIP']}"  style="position: absolute; left: 27px; top: 14px"/>  
                                     <p:inputText id="globalFilter" onkeyup="lovEmpresaInformacionPersonal.filter();" style="width:150px; position: relative; left: 40px;" />  
                                 </f:facet>
-                                <p:column filterBy="#{empresaIP.nombre}" filterMatchMode="contains" >
+                                <p:column filterBy="#{empresaIP.nombre}" filterMatchMode="contains" filterStyle="width: 85%" >
                                     <f:facet name="header">
                                         <h:outputText style="text-align: center" value="#{msg['nombreEmpresa']}" />
                                     </f:facet>
                                     <h:outputText  value="#{empresaIP.nombre}" />
                                 </p:column>
-                                <p:column filterBy="#{empresaIP.nit}" filterMatchMode="contains" >
+                                <p:column filterBy="#{empresaIP.nit}" width="80" filterMatchMode="contains" filterStyle="width: 85%" >
                                     <f:facet name="header">
                                         <h:outputText value="#{msg['nitEmpresa']}" />
                                     </f:facet>
@@ -685,33 +684,32 @@
                                 </p:column>
                             </p:dataTable>
 
-                            <h:outputText id="infoRegistroEmpresaInformacionPersonal" value="#{controlPersonaIndividual.infoRegistroEmpresaInformacionPersonal}" style="position: absolute; left: 20px; top: 325px; font-weight: bold"/>
+                            <h:outputText id="infoRegistroEmpresaInformacionPersonal" value="#{controlPersonaIndividual.infoRegistroEmpresaInformacionPersonal}" style="position: relative; left: 10px; top: 15px; font-weight: bold"/>
 
-                            <p:commandButton id="aceptarEIP" style="position: relative; left: 220px; top: -15px" value="#{msg['aceptar']}" disabled="#{controlPersonaIndividual.aceptar}" onclick="operacionEnProceso.show()" oncomplete="operacionEnProceso.hide()" actionListener="#{controlPersonaIndividual.actualizarParametroEmpresaInformacionPersonal()}" process="@this" icon="ui-icon-check"/>
+                            <p:commandButton id="aceptarEIP" style="position: relative; left: 60px; top: 15px" value="#{msg['aceptar']}" disabled="#{controlPersonaIndividual.aceptar}" onclick="operacionEnProceso.show()" oncomplete="operacionEnProceso.hide()" actionListener="#{controlPersonaIndividual.actualizarParametroEmpresaInformacionPersonal()}" process="@this" icon="ui-icon-check"/>
 
-                            <p:commandButton id="atrasEIP" style="position: relative; left: 220px; top: -15px" value="#{msg['atras']}" onclick="operacionEnProceso.show()" oncomplete="operacionEnProceso.hide()" actionListener="#{controlPersonaIndividual.cancelarParametroEmpresaInformacionPersonal()}"  process="@this" icon="ui-icon-arrowreturnthick-1-w"/>
+                            <p:commandButton id="atrasEIP" style="position: relative; left: 60px; top: 15px" value="#{msg['atras']}" onclick="operacionEnProceso.show()" oncomplete="operacionEnProceso.hide()" actionListener="#{controlPersonaIndividual.cancelarParametroEmpresaInformacionPersonal()}"  process="@this" icon="ui-icon-arrowreturnthick-1-w"/>
                         </p:dialog>
 
 
                         <p:dialog header="#{msg['tipoDocumentoM']}" widgetVar="TipoDocumentoInformacionPersonalDialogo" draggable="false" resizable="false" closable="false" id="TipoDocumentoInformacionPersonalDialogo"  
-                                  showEffect="fade" hideEffect="fade" width="410" modal="true" >
+                                  showEffect="fade" hideEffect="fade" width="410" height="345" >
                             <p:dataTable id="lovTipoDocumentoInformacionPersonal" style=" width: 370px" var="tipoDIP" value="#{controlPersonaIndividual.lovTiposDocumentos}" rowKey="#{tipoDIP.secuencia}"
-                                         selection="#{controlPersonaIndividual.tipoDocumentoSeleccionado}" scrollWidth="388" selectionMode="single" widgetVar="lovTipoDocumentoInformacionPersonal" scrollable="true" scrollHeight="250"
-                                         emptyMessage="#{msg['lovvacio']}" filteredValue="#{controlPersonaIndividual.filtrarLovTiposDocumentos}"
-                                         >
+                                         selection="#{controlPersonaIndividual.tipoDocumentoSeleccionado}" scrollWidth="388" selectionMode="single" widgetVar="lovTipoDocumentoInformacionPersonal" scrollable="true" scrollHeight="200"
+                                         emptyMessage="#{msg['lovvacio']}" filteredValue="#{controlPersonaIndividual.filtrarLovTiposDocumentos}">
                                 <p:ajax event="rowDblselect" listener="#{controlPersonaIndividual.actualizarParametroTipoDocumentoInformacionPersonal()}"  process="@this" />
                                 <p:ajax event="rowSelect" process="@this" immediate="true"  listener="#{controlPersonaIndividual.activarAceptar()}" update=":formLovs:formDInformacionPersonal:aceptarTDIP"/>
                                 <f:facet name="header">  
                                     <h:outputText value="#{msg['buscarTDIP']}"  style="position: absolute; left: 27px; top: 14px"/>  
                                     <p:inputText id="globalFilter" onkeyup="lovTipoDocumentoInformacionPersonal.filter();" style="width:150px; position: relative; left: 75px;" />  
                                 </f:facet>
-                                <p:column filterBy="#{tipoDIP.nombrecorto}" filterMatchMode="contains" >
+                                <p:column filterBy="#{tipoDIP.nombrecorto}" width="100" filterMatchMode="contains" filterStyle="width: 85%">
                                     <f:facet name="header">
                                         <h:outputText style="text-align: center" value="#{msg['nombreCorto']}" />
                                     </f:facet>
                                     <h:outputText  value="#{tipoDIP.nombrecorto}" />
                                 </p:column>
-                                <p:column filterBy="#{tipoDIP.nombrelargo}" filterMatchMode="contains" >
+                                <p:column filterBy="#{tipoDIP.nombrelargo}" filterMatchMode="contains" filterStyle="width: 85%">
                                     <f:facet name="header">
                                         <h:outputText value="#{msg['tipoDocumento']}" />
                                     </f:facet>
@@ -719,10 +717,10 @@
                                 </p:column>
                             </p:dataTable>
 
-                            <h:outputText id="infoRegistroTipoDocumentoInformacionPersonal" value="#{controlPersonaIndividual.infoRegistroTipoDocumentoInformacionPersonal}" style="position: absolute; left: 20px; top: 355px; font-weight: bold"/>
+                            <h:outputText id="infoRegistroTipoDocumentoInformacionPersonal" value="#{controlPersonaIndividual.infoRegistroTipoDocumentoInformacionPersonal}" style="position: relative; left: 10px; top: 5px; font-weight: bold"/>
 
-                            <p:commandButton id="aceptarTDIP" style="position: relative; left: 220px; top: 5px" value="#{msg['aceptar']}" disabled="#{controlPersonaIndividual.aceptar}" onclick="operacionEnProceso.show()" oncomplete="operacionEnProceso.hide()" actionListener="#{controlPersonaIndividual.actualizarParametroTipoDocumentoInformacionPersonal()}" process="@this" icon="ui-icon-check"/>
-                            <p:commandButton id="atrasTDIP" style="position: relative; left: 220px; top: 5px" value="#{msg['atras']}" onclick="operacionEnProceso.show()" oncomplete="operacionEnProceso.hide()" actionListener="#{controlPersonaIndividual.cancelarParametroTipoDocumentoInformacionPersonal()}" process="@this" icon="ui-icon-arrowreturnthick-1-w"/>
+                            <p:commandButton id="aceptarTDIP" style="position: relative; left: 50px; top: 15px" value="#{msg['aceptar']}" disabled="#{controlPersonaIndividual.aceptar}" onclick="operacionEnProceso.show()" oncomplete="operacionEnProceso.hide()" actionListener="#{controlPersonaIndividual.actualizarParametroTipoDocumentoInformacionPersonal()}" process="@this" icon="ui-icon-check"/>
+                            <p:commandButton id="atrasTDIP" style="position: relative; left: 51px; top: 15px" value="#{msg['atras']}" onclick="operacionEnProceso.show()" oncomplete="operacionEnProceso.hide()" actionListener="#{controlPersonaIndividual.cancelarParametroTipoDocumentoInformacionPersonal()}" process="@this" icon="ui-icon-arrowreturnthick-1-w"/>
                         </p:dialog>
 
                         <p:dialog header="#{msg['ciudadDocumentoM']}" widgetVar="CiudadDocumentoInformacionPersonalDialogo" draggable="false" resizable="false" closable="false" id="CiudadDocumentoInformacionPersonalDialogo"  
