--- a/DesignerRHN/DesignerRHN-war/web/Template.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/Template.xhtml
@@ -10,6 +10,7 @@
         <link href="./resources/css/default.css" rel="stylesheet" type="text/css" />
         <link href="./resources/css/cssLayout.css" rel="stylesheet" type="text/css" />
         <link href="./resources/css/Tema.css" rel="stylesheet" type="text/css" />
+        <link rel="shortcut icon" href="Imagenes/Iconos/favicon.ico" />
         <script type="text/javascript" src="./resources/js/calendarioIdioma.js"></script>
         <title>..::Designer.NOM::..</title>
     </h:head>
@@ -83,27 +84,36 @@
                     <h:form>
                         <div>
                             <a href="http://www.facebook.com/nominads" target="_blank">
-                                <p:graphicImage value="Imagenes/Iconos/rs_Facebook.png" alt="facebook" style="left: 0px; width: 20px; height: 20px; "/>
+                                <p:graphicImage value="Imagenes/Iconos/rs_Facebook.png" alt="facebook" 
+                                                style="left: 0px; width: 20px; height: 20px; "/>
                             </a>
                             <a href="https://plus.google.com/+nominads" target="_blank">
-                                <p:graphicImage value="Imagenes/Iconos/rs_GooglePlus.png" alt="googleplus" style="left: 0px; width: 20px; height: 20px; "/>
+                                <p:graphicImage value="Imagenes/Iconos/rs_GooglePlus.png" alt="googleplus" 
+                                                style="left: 0px; width: 20px; height: 20px; "/>
                             </a>
                             <a href="https://www.youtube.com/user/nominads" target="_blank">
-                                <p:graphicImage value="Imagenes/Iconos/rs_Youtube.png" alt="youtube" style="left: 0px; width: 20px; height: 20px; "/>
+                                <p:graphicImage value="Imagenes/Iconos/rs_Youtube.png" alt="youtube" 
+                                                style="left: 0px; width: 20px; height: 20px; "/>
                             </a>
                             <a href="https://twitter.com/#!/NominaDesigner" target="_blank">
-                                <p:graphicImage value="Imagenes/Iconos/rs_Twitter.png" alt="twiter" style="left: 0px; width: 20px; height: 20px; "/>
+                                <p:graphicImage value="Imagenes/Iconos/rs_Twitter.png" alt="twiter" 
+                                                style="left: 0px; width: 20px; height: 20px; "/>
                             </a>
                             <a href="https://www.linkedin.com/company/designer-software-limitada" target="_blank">
-                                <p:graphicImage value="Imagenes/Iconos/rs_LinkedIn.png" alt="linkedin" style="left: 0px; width: 20px; height: 20px; "/>
+                                <p:graphicImage value="Imagenes/Iconos/rs_LinkedIn.png" alt="linkedin" 
+                                                style="left: 0px; width: 20px; height: 20px; "/>
                             </a>
                             <a href="http://www.nomina.com.co/soporte/descargas/file/43-teamviewer3.html" target="_blank">
-                                <p:graphicImage value="Imagenes/Iconos/rs_Teamviewer.png" alt="teamviewer" style="left: 0px; width: 20px; height: 20px; "/>
+                                <p:graphicImage value="Imagenes/Iconos/rs_Teamviewer.png" alt="teamviewer" 
+                                                style="left: 0px; width: 20px; height: 20px; "/>
                             </a>
                             <a href="tel:+5717475043" target="_blank">
                                 <p:graphicImage value="Imagenes/Iconos/rs_pbx.png" alt="celular" style="left: 0px; width: 20px; height: 20px; "/>
                             </a>
-                            <p:commandButton value="" style="background-image: url(Imagenes/Iconos/cerrarSesion.png); background-size: 100% 100%; background-repeat: no-repeat; width: 100px; height: 30px; position: absolute; left: 780px; border: none;" actionListener="#{controlTemplate.cerrarSession()}" />
+                            <p:commandButton value="" 
+                                             style="background-image: url(Imagenes/Iconos/cerrarSesion.png); background-size: 100% 100%; background-repeat: no-repeat; 
+                                             width: 100px; height: 30px; position: absolute; left: 780px; border: none;" 
+                                             actionListener="#{controlTemplate.cerrarSession()}" />
                         </div>
                     </h:form>
                 </ui:insert>
