5 de mayo de 2016 Edwin Hastamorir Modificación visual de la pagina empleadoindividual Creación de la página generaconsulta.xhtml con sus correspondientes controlador, administrar. Se adicionó una consulta a recordatorios. Se corrigió la forma de acceder a las consultas de la tabla recordatorios utilizando una imagen, para que no muestre la imagen por default si ya tiene una imagen de consulta.
Pendiente:
Validar funcionamiento de las listas de empleadoindividual.
Corregir error en el componente de fechas de empleadoindividual.
Correcciones a la pagina nreportenomina.

--- a/DesignerRHN/DesignerRHN-war/web/PaginaNoEncontrada.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/PaginaNoEncontrada.xhtml
@@ -10,7 +10,7 @@
         <ui:composition template="/Template.xhtml">
             <ui:define name="body">                  
                 <h:form id="form"> 
-                    <p:graphicImage value="Imagenes/paginaNoEncontrada.jpg"/>
+                    <p:graphicImage value="Imagenes/Iconos/paginaNoEncontrada.jpg" style="box-shadow: 5px 5px 5px 0px rgba(0,12,92,1);"/>
                 </h:form>
             </ui:define>
         </ui:composition>
