--- a/DesignerRHN/DesignerRHN-war/web/emplvigenciascargos.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/emplvigenciascargos.xhtml
@@ -532,7 +532,7 @@
                     </p:dialog>
 
                     <p:dialog id="errorObjetosDB" header="#{msg['error']}" widgetVar="errorObjetosDB"  resizable="false" draggable="false" modal="true" height="60" width="275px"  closable="true">  
-                        <h:graphicImage value="Imagenes/Iconos/error.png" width="50" height="50" stysle="position: absolute; left: 10px; top: 10px;"/>
+                        <h:graphicImage value="Imagenes/Iconos/error.png" width="50" height="50" style="position: absolute; left: 10px; top: 10px;"/>
                         <h:outputText value="#{msg['errorObjetosDB']}" style="position: absolute; left: 70px; top: 15px; width: 185px; font-weight:bold;" />
                     </p:dialog>
                     
