--- a/DesignerRHN/DesignerRHN-war/web/resources/linkare/calendar.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/resources/linkare/calendar.xhtml
@@ -11,7 +11,6 @@
 
     <!-- INTERFACE -->
     <cc:interface>
-
         <cc:attribute name="value" type="java.util.Date" shortDescription="The value of this component" required="false" />
         <cc:attribute name="mask" type="java.lang.String" 
                       required="false" default="99/99/9999"
@@ -22,7 +21,7 @@
                       The default value is dd/MM/yyyy" />
         <cc:attribute name="color" default="black" shortDescription="Color pode default del componente"/>
         <cc:attribute name="decoration" default="none" shortDescription="Decoration default del componente"/>
-        <cc:attribute name="width" default="60" shortDescription="Ancho componente referenciado en pixeles"/>
+        <cc:attribute name="width" default="70" shortDescription="Ancho componente referenciado en pixeles"/>
         <cc:attribute name="height" default="12" shortDescription="Alto componente referenciado en porcentaje"/>
         <cc:attribute name="disabled" default="false" shortDescription="Activo/Inactivo componente fecha"/>
         <cc:attribute name="readonly" default="false" shortDescription="ReadOnly del componente fecha"/>
@@ -34,15 +33,19 @@
         <cc:clientBehavior name="change" targets="calendar" event="change" />
         <cc:clientBehavior name="click" targets="calendar" event="click"/>
         <cc:clientBehavior name="focus" targets="calendar" event="focus"/>
-
     </cc:interface>
 
     <!-- IMPLEMENTATION -->
     <cc:implementation>
         <!-- This component has been simplified but it could include any attribute of the inputMask 
          component that we wish our developer clients to be able to specify -->
-        <p:inputMask onclick="select();#{cc.attrs.onclick}"  onselect="#{cc.attrs.onselect}" onchange="#{cc.attrs.onchange}" readonly="#{cc.attrs.readonly}" disabled="#{cc.attrs.disabled}" style="height: #{cc.attrs.height}px; width: #{cc.attrs.width}%;color: #{cc.attrs.color};text-decoration: #{cc.attrs.decoration}" id="calendar" styleClass="masked_calendar" mask="#{cc.attrs.mask}" 
-                     value="#{cc.attrs.value}" >
+        <p:inputMask id="calendar" onclick="select();#{cc.attrs.onclick}"  onselect="#{cc.attrs.onselect}" 
+                     onchange="#{cc.attrs.onchange}" readonly="#{cc.attrs.readonly}" 
+                     disabled="#{cc.attrs.disabled}" mask="#{cc.attrs.mask}" 
+                     value="#{cc.attrs.value}" style="height: #{cc.attrs.height}px; width: #{cc.attrs.width}px; 
+                     color: #{cc.attrs.color}; text-decoration: #{cc.attrs.decoration}" 
+                     styleClass="masked_calendar"
+                     >
             <f:convertDateTime pattern="#{cc.attrs.pattern}" timeZone="America/Bogota" locale="es" />
         </p:inputMask>
         <h:outputScript target="head" library="js" name="calendar.js"  />
